"Выровнил буквы городо"

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ body {
   margin-top: 98px;
   gap: 16px;
 }
+
 /* Секция с результатами */
 .result {
    flex: 1 1 711px;
@@ -194,7 +195,7 @@ flex: 1 1 399px;
 .title {
   font-size: 75px;
   line-height: 0.94;
-  margin-bottom: 26px; /* Отступ между заголовком и списком */
+  margin-bottom: 48px; /* Отступ между заголовком и списком */
   font-weight: 700;
   text-transform: uppercase;
   font-family: 'Oswald', sans-serif;
@@ -273,7 +274,7 @@ background-color: #545050;
 }
 
 .content__video-card-title {
- margin: 0 0 6px 0;
+ margin: 12px 0 6px 13px;
   font-size: 30px;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
