--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body {
    border: none;
   margin: 0;
   padding: 0;
-  flex-grow: 1; /* Растягиваем на доступное пространство */
+  flex-grow: 2; /* Растягиваем на доступное пространство */
 }
 
 
@@ -91,16 +91,20 @@ body {
 }
 
 .search-form__textfield {
-  width: 100%;
-  padding: 2.5px 0 2.5px 0;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
-  transition: border-color 0.3s;
-  background-color: transparent;
-  color: white;
-  border-color: white;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  background-color: #1b1919;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  min-width: 225px;
+  appearance: none;
+  padding: 2.5px 7px;
 }
+
 
 .search-form__fieldset_city {
   border: none;
