--- a/styles/style.css
+++ b/styles/style.css
@@ -68,9 +68,12 @@ body {
   justify-content: space-between; /* Равномерное распределение */
   align-items: end; /* Прижатие к началу контейнера */
   gap: 40px; /* Отступ между элементами формы */
+  
 }
 
 .search-form__fieldset {
+  width: 225px;
+  height: 54px;
   flex-grow: 0;
    border: none;
   margin: 0;
@@ -86,6 +89,7 @@ body {
 
 .search-form__fieldset-title {
   font-size: 18px;
+  height: 19px;
   margin-bottom: 5px;
   font-weight: 600;
 }
@@ -103,14 +107,15 @@ body {
   min-width: 225px;
   appearance: none;
   padding: 2.5px 7px;
+  
 }
 
 
-.search-form__fieldset_city {
+/*.search-form__fieldset_city {
   border: none;
   border-bottom: solid rgba(255, 255, 255, 0.7) 1px;
   flex-grow: 2;
-}
+} */
 
 .search-form__textfield:focus {
   outline: none;
@@ -131,17 +136,17 @@ body {
 
 .search-form__pseudo-checkbox {
   display: inline-block;
-  width: 18px;
-  height: 18px;
-  border: 2px solid #ddd;
-  border-radius: 4px;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #ffffff;
+  border-radius: none;
   position: relative;
   transition: all 0.2s;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox {
-  background-color: #3498db;
-  border-color: #3498db;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -167,7 +172,7 @@ body {
   color: white;
   border: 1px solid white;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
   transition: background-color 0.3s;
   font-family: inherit;
@@ -189,6 +194,13 @@ body {
 .button:focus-visible {
   outline: 1px solid white;
   outline-offset: 1px;
+}
+
+/* модификация для кнопки Показать ещё */
+.more-buttom {
+  height: 34px;
+  width: 100%;
+  margin-top: 30px;
 }
 
 .search-form__submit-button {
