--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,22 @@ body {
   align-items: center;
 }
 
+.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+}
+
+.search-form__label-text {
+  font-size: 18px;
+  line-height: 1.2;
+}
+
 .search-form__pseudo-checkbox {
   display: inline-flex;
   justify-content: center;
@@ -137,17 +153,6 @@ body {
   height: 15px;
   background-color: #ffffff;
   display: inline-block;
-}
-
-.search-form__label {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  cursor: pointer;
-}
-
-.search-form__label-text {
-  font-size: 18px;
 }
 
 /* Кнопки */
